[Homepage] Fix led z-index. Add led fading.

--- a/style.css
+++ b/style.css
@@ -42,7 +42,8 @@ a::selection {
 	position: relative;
     float: right;
     top: 46%;
-    right: 11%;
+    right: 10.6%;
+	z-index: 2;
 }
 
 #display-image {
